# parabix-coat

./: .gitmodules  CMakeLists.txt  DFA.cpp  README.md  asmjit_tryout.cpp  build_dependencies.sh  character_database_64.h  main.cpp  parabix_coat.cpp  parabix_cpp.cpp  utils.h
scalar/: character_database_64.h  coat_vector.h  operations_64.h  operations_64_coat.h
